--- a/index.html
+++ b/index.html
@@ -12,6 +12,202 @@
 	<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-	
+	<!-- Start Header -->
+	<header>
+		<div class="container">
+			<a class="logo" href="#">Elzero</a>
+			<ul class="nav">
+				<li class="li"><a class="a" href="#">Articles</a></li>
+				<li class="li"><a class="a" href="#">Gallary</a></li>
+				<li class="li"><a class="a" href="#">Features</a></li>
+				<li class="li other"><a class="a" href="#">Other Links</a>
+					<div class="megamenu">
+						<img src="image/megamenu.png" alt="image">
+						<ul>
+							<li><a href="">
+								<i class="far fa-comments fa-fw"></i>
+								<span>Testimonials</span>
+							</a></li>
+							<li><a href="">
+								<i class="far fa-user fa-fw"></i>
+								<span>Team Members</span>
+							</a></li>
+							<li><a href="">
+								<i class="far fa-building fa-fw"></i>
+								<span>Services</span>
+							</a></li>
+							<li><a href="">
+								<i class="far fa-check-circle fa-fw"></i>
+								<span>Our Skills</span>
+							</a></li>
+							<li><a class="border" href="">
+								<i class="far fa-clipboard fa-fw"></i>
+								<span>How It Work</span>
+							</a></li>
+						</ul>
+						<ul>
+							<li><a href="">
+								<i class="far fa-calendar-alt fa-fw"></i>
+								<span>Events</span>
+							</a></li>
+							<li><a href="">
+								<i class="fas fa-server fa-fw"></i>
+								<span>Pricing Plans</span>
+							</a></li>
+							<li><a href="">
+								<i class="far fa-play-circle fa-fw"></i>
+								<span>Top Videos</span>
+							</a></li>
+							<li><a href="">
+								<i class="far fa-chart-bar fa-fw"></i>
+								<span>Stats</span>
+							</a></li>
+							<li><a href="">
+								<i class="fas fa-percent fa-fw"></i>
+								<span>Request A Discount</span>
+							</a></li>
+						</ul>
+					</div>		
+				</li>
+			</ul>
+		</div>
+	</header>
+	<!-- End Header -->
+	<!-- Start Lnading -->
+	<section class="landing">
+		<div class="container">
+			<div class="text">
+				<h1>Welcome, To Elzero World</h1>
+				<p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
+			</div>
+			<div class="image"><img src="image/landing-image.png"></div>
+			<a href="#"><i class="fas fa-angle-double-down arrow"></i></a>
+		</div>
+	</section>
+	<!-- End Lnading -->
+	<!-- Strat Articles -->
+	<section class="articles">
+		<div class="container">
+			<h2 class="sec-title">ARTICLES</h2>
+			<div class="art-box">
+				<div class="art">
+					<img src="image/cat-01.jpg">
+					<div class="text">
+						<h3>Test Titel</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+					</div>
+					<div class="more">
+						<a href="">Read More</a>
+						<i class="fas fa-long-arrow-alt-right"></i>
+					</div>
+				</div>
+				<div class="art">
+					<img src="image/cat-02.jpg">
+					<div class="text">
+						<h3>Test Titel</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+					</div>
+					<div class="more">
+						<a href="">Read More</a>
+						<i class="fas fa-long-arrow-alt-right"></i>
+					</div>
+				</div>
+				<div class="art">
+					<img src="image/cat-03.jpg">
+					<div class="text">
+						<h3>Test Titel</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+					</div>
+					<div class="more">
+						<a href="">Read More</a>
+						<i class="fas fa-long-arrow-alt-right"></i>
+					</div>
+				</div>
+				<div class="art">
+					<img src="image/cat-04.jpg">
+					<div class="text">
+						<h3>Test Titel</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+					</div>
+					<div class="more">
+						<a href="">Read More</a>
+						<i class="fas fa-long-arrow-alt-right"></i>
+					</div>
+				</div>
+				<div class="art">
+					<img src="image/cat-05.jpg">
+					<div class="text">
+						<h3>Test Titel</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+					</div>
+					<div class="more">
+						<a href="">Read More</a>
+						<i class="fas fa-long-arrow-alt-right"></i>
+					</div>
+				</div>
+				<div class="art">
+					<img src="image/cat-06.jpg">
+					<div class="text">
+						<h3>Test Titel</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+					</div>
+					<div class="more">
+						<a href="">Read More</a>
+						<i class="fas fa-long-arrow-alt-right"></i>
+					</div>
+				</div>
+				<div class="art">
+					<img src="image/cat-07.jpg">
+					<div class="text">
+						<h3>Test Titel</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+					</div>
+					<div class="more">
+						<a href="">Read More</a>
+						<i class="fas fa-long-arrow-alt-right"></i>
+					</div>
+				</div>
+				<div class="art">
+					<img src="image/cat-08.jpg">
+					<div class="text">
+						<h3>Test Titel</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+					</div>
+					<div class="more">
+						<a href="">Read More</a>
+						<i class="fas fa-long-arrow-alt-right"></i>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Articles -->
+	<!-- Start Gallery -->
+	<section class="gallery">
+		<div class="container">
+			<h2 class="sec-title">GALLERY</h2>
+			<div class="glry-box">
+				<div class="glry">
+					<div><img src="image/gallery-01.png"></div>
+				</div>
+				<div class="glry">
+					<div><img src="image/gallery-02.png"></div>
+				</div>
+				<div class="glry">
+					<div><img src="image/gallery-03.jpg"></div>
+				</div>
+				<div class="glry">
+					<div><img src="image/gallery-04.png"></div>
+				</div>
+				<div class="glry">
+					<div><img src="image/gallery-05.jpg"></div>
+				</div>
+				<div class="glry">
+					<div><img src="image/gallery-06.png"></div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Gallery -->
 </body>
 </html>
