craet section features

--- a/index.html
+++ b/index.html
@@ -209,5 +209,38 @@
 		</div>
 	</section>
 	<!-- End Gallery -->
+	<!-- Start Features -->
+	<section class="features">
+		<div class="container">
+			<h2 class="sec-title">FEATURES</h2>
+			<div class="feat-box">
+				<div class="feat">
+					<div class="header"><img src="/image/features-01.jpg" alt="image"></div>
+					<div class="content">
+						<div class="title-feat">Quality</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+					</div>
+					<div class="footer"><span>More</span></div>
+				</div>
+				<div class="feat">
+					<div class="header"><img src="/image/features-02.jpg" alt="image"></div>
+					<div class="content">
+						<div class="title-feat">Time</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+					</div>
+					<div class="footer"><span>More</span></div>
+				</div>
+				<div class="feat">
+					<div class="header"><img src="/image/features-03.jpg" alt="image"></div>
+					<div class="content">
+						<div class="title-feat">Passion</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+					</div>
+					<div class="footer"><span>More</span></div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Features -->
 </body>
 </html>
