create section testimonials, team members and arrange some codes

--- a/index.html
+++ b/index.html
@@ -242,5 +242,233 @@
 		</div>
 	</section>
 	<!-- End Features -->
+	<!-- Start Testimonials -->
+	<section class="testimonials">
+		<div class="container">
+			<h2 class="sec-title">TESTIMONIALS</h2>
+			<div class="cards">
+				<div class="card">
+					<img src="/image/avatar-01.png" alt="image">
+					<div class="title">
+						<h3>Mohamed Farag</h3>
+						<span>Full Stack Developer</span>
+						<ul>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+						</ul>
+					</div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+				</div>
+				<div class="card">
+					<img src="/image/avatar-02.png" alt="image">
+					<div class="title">
+						<h3>Mohamed Farag</h3>
+						<span>Full Stack Developer</span>
+						<ul>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+						</ul>
+					</div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+				</div>
+				<div class="card">
+					<img src="/image/avatar-03.png" alt="image">
+					<div class="title">
+						<h3>Mohamed Farag</h3>
+						<span>Full Stack Developer</span>
+						<ul>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+						</ul>
+					</div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+				</div>
+				<div class="card">
+					<img src="/image/avatar-04.png" alt="image">
+					<div class="title">
+						<h3>Mohamed Farag</h3>
+						<span>Full Stack Developer</span>
+						<ul>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+						</ul>
+					</div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+				</div>
+				<div class="card">
+					<img src="/image/avatar-05.png" alt="image">
+					<div class="title">
+						<h3>Mohamed Farag</h3>
+						<span>Full Stack Developer</span>
+						<ul>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+						</ul>
+					</div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+				</div>
+				<div class="card">
+					<img src="/image/avatar-06.png" alt="image">
+					<div class="title">
+						<h3>Mohamed Farag</h3>
+						<span>Full Stack Developer</span>
+						<ul>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="filled fas fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+						</ul>
+					</div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Testimonials -->
+	<!-- Start Team Members -->
+	<section class="teammembers">
+		<div class="container">
+			<h2 class="sec-title">TEAM MEMBERS</h2>
+			<div class="cards">
+				<div class="card">
+					<div class="content">
+						<img src="/image/team-01.jpg" alt="image">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+							<li><a href="#"><i class="fab fa-youtube"></i></a></li>
+						</ul>
+					</div>
+					<div class="title">
+						<h3>Name</h3>
+						<span>Simple Short Description</span>
+					</div>
+				</div>
+				<div class="card">
+					<div class="content">
+						<img src="/image/team-02.jpg" alt="image">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+							<li><a href="#"><i class="fab fa-youtube"></i></a></li>
+						</ul>
+					</div>
+					<div class="title">
+						<h3>Name</h3>
+						<span>Simple Short Description</span>
+					</div>
+				</div>
+				<div class="card">
+					<div class="content">
+						<img src="/image/team-03.jpg" alt="image">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+							<li><a href="#"><i class="fab fa-youtube"></i></a></li>
+						</ul>
+					</div>
+					<div class="title">
+						<h3>Name</h3>
+						<span>Simple Short Description</span>
+					</div>
+				</div>
+				<div class="card">
+					<div class="content">
+						<img src="/image/team-04.jpg" alt="image">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+							<li><a href="#"><i class="fab fa-youtube"></i></a></li>
+						</ul>
+					</div>
+					<div class="title">
+						<h3>Name</h3>
+						<span>Simple Short Description</span>
+					</div>
+				</div>
+				<div class="card">
+					<div class="content">
+						<img src="/image/team-05.png" alt="image">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+							<li><a href="#"><i class="fab fa-youtube"></i></a></li>
+						</ul>
+					</div>
+					<div class="title">
+						<h3>Name</h3>
+						<span>Simple Short Description</span>
+					</div>
+				</div>
+				<div class="card">
+					<div class="content">
+						<img src="/image/team-06.png" alt="image">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+							<li><a href="#"><i class="fab fa-youtube"></i></a></li>
+						</ul>
+					</div>
+					<div class="title">
+						<h3>Name</h3>
+						<span>Simple Short Description</span>
+					</div>
+				</div>
+				<div class="card">
+					<div class="content">
+						<img src="/image/team-07.jpg" alt="image">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+							<li><a href="#"><i class="fab fa-youtube"></i></a></li>
+						</ul>
+					</div>
+					<div class="title">
+						<h3>Name</h3>
+						<span>Simple Short Description</span>
+					</div>
+				</div>
+				<div class="card">
+					<div class="content">
+						<img src="/image/team-08.jpg" alt="image">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+							<li><a href="#"><i class="fab fa-youtube"></i></a></li>
+						</ul>
+					</div>
+					<div class="title">
+						<h3>Name</h3>
+						<span>Simple Short Description</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Team Members -->
 </body>
 </html>
