Create Section Services, Our Skills, How it Works, Latest Events And Pricing Plans.

--- a/index.html
+++ b/index.html
@@ -470,5 +470,227 @@
 		</div>
 	</section>
 	<!-- End Team Members -->
+	<!-- Start Services -->
+	<section class="services">
+		<div class="container">
+			<h2 class="sec-title">SERVICES</h2>
+			<div class="cards">
+				<div class="card">
+					<div class="header">
+						<i class="fas fa-user-shield fa-4x"></i>
+						<h3>Security</h3>
+					</div>
+					<div class="footer">
+						<a href="#">Detals</a>
+					</div>
+				</div>
+				<div class="card">
+					<div class="header">
+						<i class="fas fa-tools fa-4x"></i>
+						<h3>Fixing Issues</h3>
+					</div>
+					<div class="footer">
+						<a href="#">Detals</a>
+					</div>
+				</div>
+				<div class="card">
+					<div class="header">
+						<i class="fas fa-map-marked-alt fa-4x"></i>
+						<h3>Location</h3>
+					</div>
+					<div class="footer">
+						<a href="#">Detals</a>
+					</div>
+				</div>
+				<div class="card">
+					<div class="header">
+						<i class="fas fa-laptop-code fa-4x"></i>
+						<h3>Coding</h3>
+					</div>
+					<div class="footer">
+						<a href="#">Detals</a>
+					</div>
+				</div>
+				<div class="card">
+					<div class="header">
+						<i class="fas fa-palette fa-4x"></i>
+						<h3>Design</h3>
+					</div>
+					<div class="footer">
+						<a href="#">Detals</a>
+					</div>
+				</div>
+				<div class="card">
+					<div class="header">
+						<i class="fas fa-bullhorn fa-4x"></i>
+						<h3>Marketing</h3>
+					</div>
+					<div class="footer">
+						<a href="#">Detals</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Services -->
+	<!-- Start Our Skills -->
+	<section class="ourskills">
+		<div class="container">
+			<h2 class="sec-title">OUR SKILLS</h2>
+			<div class="box">
+				<img src="/image/skills.png" alt="image">
+				<div class="data">
+					<span>HTML</span>
+					<div class="line"></div>
+					<span>CSS</span>
+					<div class="line"></div>
+					<span>JavaScript</span>
+					<div class="line"></div>
+					<span>Python</span>
+					<div class="line"></div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Our Skills -->
+	<!-- Start How it Works -->
+	<section class="how-it-works">
+		<div class="container">
+			<h2 class="sec-title">HOW IT WORKS ?</h2>
+			<div class="box">
+				<img src="/image/work-steps.png" alt="image">
+				<div class="cards">
+					<div class="card">
+						<img src="/image/work-steps-1.png" alt="image">
+						<div class="text">
+							<h3>Business Analysis</h3>
+							<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quas magni quos eum totam cumque sed error dolores impedit sit magnam atque, officia temporibus vitae maiores corrupti veniam natus adipisci!</p>
+						</div>
+					</div>
+					<div class="card">
+						<img src="/image/work-steps-2.png" alt="image">
+						<div class="text">
+							<h3>Architecture</h3>
+							<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quas magni quos eum totam cumque sed error dolores impedit sit magnam atque, officia temporibus vitae maiores corrupti veniam natus adipisci!</p>
+						</div>
+					</div>
+					<div class="card">
+						<img src="/image/work-steps-3.png" alt="image">
+						<div class="text">
+							<h3>Developement</h3>
+							<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quas magni quos eum totam cumque sed error dolores impedit sit magnam atque, officia temporibus vitae maiores corrupti veniam natus adipisci!</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End How it Works -->
+	<!-- Start Latest Events -->
+	<section class="latest-events">
+		<div class="container">
+			<h2 class="sec-title">LATEST EVENTS</h2>
+			<div class="box">
+				<img src="/image/events.png" alt="image">
+				<div class="NaN1">
+					<div class="count-down">
+						<div class="days count">
+							<div class="num">999</div>
+							<span>Days</span>
+						</div>
+						<div class="hours count">
+							<div class="num">99</div>
+							<span>Hours</span>
+						</div>
+						<div class="minutes count">
+							<div class="num">99</div>
+							<span>Minutes</span>
+						</div>
+						<div class="seconds count">
+							<div class="num">99</div>
+							<span>Seconds</span>
+						</div>
+					</div>
+					<div class="text">
+						<h3>Tech Masters Event 2021</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero tenetur doloremque iusto ut adipisci quam ratione aliquam excepturi nulla in harum, veritatis porro</p>
+					</div>
+				</div>
+			</div>
+			<div class="sub">
+				<form action="">
+					<input class="email" type="email" placeholder="Type Your Email :D">
+					<input class="submit" type="submit" value="Subscribe">
+				</form>
+			</div>
+			<div class="dots up">
+				<img src="/image/dots.png" alt="image">
+				<img src="/image/dots.png" alt="image">
+			</div>
+		</div>
+	</section>
+	<!-- End Latest Events -->
+	<!-- Start Pricing Plans -->
+	<section class="pricing-plans">
+		<div class="container">
+			<h2 class="sec-title">PRICING PLANS</h2>
+			<div class="cards">
+				<div class="card">
+					<div class="header">
+						<h3>Basic</h3>
+						<img src="/image/hosting-basic.png" alt="image">
+						<div class="price">$15</div>
+						<span>Per Month</span>
+					</div>
+					<ul class="features">
+						<li class="feature">10GB HDD Space</li>
+						<li class="feature">5 Email Addresses</li>
+						<li class="feature">2 Subdomains</li>
+						<li class="feature">4 Databases</li>
+						<li class="feature">Basic Support</li>
+					</ul>
+					<div class="footer"><span>Choose Plan</span></div>
+				</div>
+				<div class="card popular">
+					<div class="label">Most Popular</div>
+					<div class="header">
+						<h3>Advanced</h3>
+						<img src="/image/hosting-advanced.png" alt="image">
+						<div class="price">$25</div>
+						<span>Per Month</span>
+					</div>
+					<ul class="features">
+						<li class="feature">20GB HDD Space</li>
+						<li class="feature">10 Email Addresses</li>
+						<li class="feature">5 Subdomains</li>
+						<li class="feature">8 Databases</li>
+						<li class="feature">Advanced Support</li>
+					</ul>
+					<div class="footer"><span>Choose Plan</span></div>
+				</div>
+				<div class="card">
+					<div class="header">
+						<h3>Professional</h3>
+						<img src="/image/hosting-professional.png" alt="image">
+						<div class="price">$45</div>
+						<span>Per Month</span>
+					</div>
+					<ul class="features">
+						<li class="feature">50GB HDD Space</li>
+						<li class="feature">20 Email Addresses</li>
+						<li class="feature">10 Subdomains</li>
+						<li class="feature">20 Databases</li>
+						<li class="feature">Professional Support</li>
+					</ul>
+					<div class="footer"><span>Choose Plan</span></div>
+				</div>
+			</div>
+			<div class="dots down">
+				<img src="/image/dots.png" alt="image">
+				<img src="/image/dots.png" alt="image">
+			</div>
+		</div>
+	</section>
+	<!-- End Pricing Plans -->
 </body>
 </html>
