Create Section Top Videos, Our Awsome Stats, Discount And Footer.

--- a/index.html
+++ b/index.html
@@ -692,5 +692,162 @@
 		</div>
 	</section>
 	<!-- End Pricing Plans -->
+	<!-- Start Top Videos -->
+	<section class="top-videos">
+		<div class="container">
+			<h2 class="sec-title">Top Videos</h2>
+			<div class="box">
+				<ul class="list-top-videos">
+					<li class="top-videos-title">Top Videos<a href="#"><i class="fas fa-random"></i></a></li>
+					<li>
+						<a href="#">
+							<div class="title">How To Create Sub Domain</div>
+							<div class="min">05:18</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="title">Playing With The DNS</div>
+							<div class="min">03:18</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="title">Everything About The Virtual Hosts</div>
+							<div class="min">05:25</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="title">How To Monitor Your Website</div>
+							<div class="min">04:16</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="title">Uncharted Beating The Last Boss</div>
+							<div class="min">07:48</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="title">Ys Oath In Felghana Overview</div>
+							<div class="min">03:12</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="title">Ys Series All Games Ending</div>
+							<div class="min">08:10</div>
+						</a>
+					</li>
+				</ul>
+				<div class="container-video">
+					<img src="/image/video-preview.jpg" alt="image">
+					<span>Everything About The Virtual Hosts</span>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Top Videos -->
+	<!-- Start Our Awesome Stats -->
+	<section class="our-awesome-stats">
+		<div class="container">
+			<h2>Our Awesome Stats</h2>
+			<ul>
+				<li>
+					<i class="far fa-user fa-2x fa-fw"></i>
+					<span class="num">150</span>
+					<span class="name">Clints</span>
+				</li>
+				<li>
+					<i class="fas fa-code fa-2x fa-fw"></i>
+					<span class="num">135</span>
+					<span class="name">Projects</span>
+				</li>
+				<li>
+					<i class="fas fa-globe-asia fa-2x fa-fw"></i>
+					<span class="num">50</span>
+					<span class="name">Countries</span>
+				</li>
+				<li>
+					<i class="far fa-money-bill-alt fa-2x fa-fw"></i>
+					<span class="num">500</span>
+					<span class="name">Money</span>
+				</li>
+			</ul>
+		</div>
+	</section>
+	<!-- End Our Awesome Stats -->
+	<!-- Start Discount -->
+	<section class="discount">
+		<div>
+			<div class="content">
+				<h2>We Have A Discount</h2>
+				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi asperiores consectetur, recusandae ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam vel similique laborum dicta aperiam odit doloribus corporis.</p>
+				<img src="/image/discount.png" alt="image">
+			</div>
+			<div class="request">
+				<div class="form-box">
+					<h2>Request A Discount</h2>
+					<form action>
+						<input class="input" type="text" name="name" placeholder="Your Name">
+						<input class="input" type="email" name="email" placeholder="Your Email">
+						<input class="input" type="text" name="mobile" placeholder="Your Phone">
+						<textarea name="textarea" cols="30" rows="10" placeholder="Tell Us About Your Needs"></textarea>
+						<input class="submit" type="submit" placeholder="Send">
+					</form>
+				</div>
+			</div>	
+		</div>
+	</section>
+	<!-- End Discount -->
+	<!-- Start Footer -->
+	<footer>
+		<div class="container">
+			<div class="box-footer">
+				<div class="contact">
+					<h3>Thanks Elzero</h3>
+					<div class="social">
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-youtube"></i></a>
+					</div>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus nulla rem, dignissimos iste aspernatur</p>
+				</div>
+				<div class="links">
+					<a href="#">Important Link 1</a>
+					<a href="#">Important Link 2</a>
+					<a href="#">Important Link 3</a>
+					<a href="#">Important Link 4</a>
+					<a href="#">Important Link 5</a>
+				</div>
+				<div class="info">
+					<div class="link">
+						<i class="fas fa-map-marker-alt fa-fw"></i>
+						<div class="text">Egypt, Giza, Inside The Sphinx, Room Number 220</div>
+					</div>
+					<div class="link">
+						<i class="far fa-clock fa-fw"></i>
+						<div class="text">Business Hours: From 10:00 To 18:00</div>
+					</div>
+					<div class="link">
+						<i class="fas fa-phone-volume fa-fw"></i>
+						<div class="text">+20123456789<br>+20198765432</div>
+					</div>
+				</div>
+				<div class="fot-glry">
+					<img src="/image/gallery-01.png" alt="image">
+					<img src="/image/gallery-02.png" alt="image">
+					<img src="/image/gallery-03.jpg" alt="image">
+					<img src="/image/gallery-04.png" alt="image">
+					<img src="/image/gallery-05.jpg" alt="image">
+					<img src="/image/gallery-06.png" alt="image">
+				</div>
+			</div>
+		</div>
+	<div class="creator">Made With ✨ Elzero</div>
+	</footer>
+	<!-- End Footer -->
 </body>
 </html>
