--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 						<div class="title-feat">Quality</div>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
 					</div>
-					<div class="footer"><span>More</span></div>
+					<div class="footer"><a>More</a></div>
 				</div>
 				<div class="feat">
 					<div class="header"><img src="/image/features-02.jpg" alt="image"></div>
@@ -228,7 +228,7 @@
 						<div class="title-feat">Time</div>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
 					</div>
-					<div class="footer"><span>More</span></div>
+					<div class="footer"><a>More</a></div>
 				</div>
 				<div class="feat">
 					<div class="header"><img src="/image/features-03.jpg" alt="image"></div>
@@ -236,7 +236,7 @@
 						<div class="title-feat">Passion</div>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
 					</div>
-					<div class="footer"><span>More</span></div>
+					<div class="footer"><a>More</a></div>
 				</div>
 			</div>
 		</div>
@@ -649,7 +649,7 @@
 						<li class="feature">4 Databases</li>
 						<li class="feature">Basic Support</li>
 					</ul>
-					<div class="footer"><span>Choose Plan</span></div>
+					<div class="footer"><a href="#">Chose Plan</a></div>
 				</div>
 				<div class="card popular">
 					<div class="label">Most Popular</div>
@@ -666,7 +666,7 @@
 						<li class="feature">8 Databases</li>
 						<li class="feature">Advanced Support</li>
 					</ul>
-					<div class="footer"><span>Choose Plan</span></div>
+					<div class="footer"><a href="#">Chose Plan</a></div>
 				</div>
 				<div class="card">
 					<div class="header">
@@ -682,7 +682,7 @@
 						<li class="feature">20 Databases</li>
 						<li class="feature">Professional Support</li>
 					</ul>
-					<div class="footer"><span>Choose Plan</span></div>
+					<div class="footer"><a href="#">Chose Plan</a></div>
 				</div>
 			</div>
 			<div class="dots down">
