responsive all section.

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
 			<h2 class="sec-title">LATEST EVENTS</h2>
 			<div class="box">
 				<img src="/image/events.png" alt="image">
-				<div class="NaN1">
+				<div class="count-down-box">
 					<div class="count-down">
 						<div class="days count">
 							<div class="num">999</div>
@@ -623,7 +623,7 @@
 					<input class="submit" type="submit" value="Subscribe">
 				</form>
 			</div>
-			<div class="dots up">
+			<div class="dots up hidden-small-screen">
 				<img src="/image/dots.png" alt="image">
 				<img src="/image/dots.png" alt="image">
 			</div>
